docs: fix slider wrap demo + refactor slider wrap cloned resize

--- a/src/gatsby/assets/styles/_demo.less
+++ b/src/gatsby/assets/styles/_demo.less
@@ -313,6 +313,7 @@ table {
   flex-direction: column;
   #toggle_open-full & {
     .flex-full();
+    width: 100%;
   }
 }
 
